--- a/resources/sass/vuexy/layout/_layoutCommon.scss
+++ b/resources/sass/vuexy/layout/_layoutCommon.scss
@@ -143,7 +143,7 @@ div[id$="demo"] {
 }
 
 .vue-back-to-top {
-  z-index:  !important;
+  z-index: 51000 !important;
 }
 
 
